--- a/src/Bot/requirements.txt
+++ b/src/Bot/requirements.txt
@@ -1,4 +1,5 @@
 APScheduler==3.6.3
+autopep8==1.5.7
 azure-common==1.1.27
 azure-core==1.16.0
 azure-identity==1.6.0
@@ -15,6 +16,7 @@ msal-extensions==0.3.0
 msrest==0.6.21
 oauthlib==3.1.1
 portalocker==1.7.1
+pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
 python-telegram-bot==13.7
@@ -23,6 +25,7 @@ pywin32==301
 requests==2.26.0
 requests-oauthlib==1.3.0
 six==1.16.0
+toml==0.10.2
 tornado==6.1
 tzlocal==2.1
 urllib3==1.26.6
