--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,16 +2,6 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "func",
-			"command": "host start",
-			"problemMatcher": "$func-python-watch",
-			"isBackground": true,
-			"dependsOn": "pip install (functions)",
-			"options": {
-				"cwd": "${workspaceFolder}/src\\Azure\\AzureFunction"
-			}
-		},
-		{
 			"label": "pip install (functions)",
 			"type": "shell",
 			"osx": {
@@ -26,6 +16,15 @@
 			"problemMatcher": [],
 			"options": {
 				"cwd": "${workspaceFolder}/src\\Azure\\AzureFunction"
+			}
+		},
+		{
+			"type": "func",
+			"command": "host start",
+			"problemMatcher": "$func-powershell-watch",
+			"isBackground": true,
+			"options": {
+				"cwd": "${workspaceFolder}/src\\azure\\function_app"
 			}
 		}
 	]
